--- a/Examplerestfulapi/WebContent/index.html
+++ b/Examplerestfulapi/WebContent/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <script>
                         function getLinkJSONpt2() {
                         var a,b,c;
@@ -41,7 +40,7 @@
     </head>
     <body>
         <h1>Giải phương trình bậc 2</h1>
-        <a>ax² + bx + c = 0<a>
+        <a>ax² + bx + c = 0</a>
         <form>
         <label for="fname">a</label><br>
         <input type="number" id="inputa" name="fname"><br>
